<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99CCFF" >

  

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges_red"
                android:padding="10dp"
                android:text="@string/c1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges_red"
                android:padding="10dp"
                android:text="@string/c2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges_yellow"
                android:padding="10dp"
                android:text="@string/c3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c7"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c8"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView8"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges_yellow"
                android:padding="10dp"
                android:text="@string/c9"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView9"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView10"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c11"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView11"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c12"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView12"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c13"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView13"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c14"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView14"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges_yellow"
                android:padding="10dp"
                android:text="@string/c15"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView15"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c16"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView16"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c17"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView android:layout_marginBottom="10dp"
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView18"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edges"
                android:padding="10dp"
                android:text="@string/c18"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />
       </RelativeLayout>
    

</RelativeLayout>

</ScrollView>